--- a/index.html
+++ b/index.html
@@ -232,11 +232,7 @@
             <select id="sabor" required>
               <option value="">Selecione...</option>
               <option>Calabresa</option>
-              <option>Frango com Catupiry</option>
-              <option>Portuguesa</option>
-              <option>Marguerita</option>
-              <option>Quatro Queijos</option>
-              <option>Outro</option>
+              <option>Muçarela</option>
             </select>
           </div>
           <div>
