--- a/index.html
+++ b/index.html
@@ -233,6 +233,7 @@
               <option value="">Selecione...</option>
               <option>Calabresa</option>
               <option>Muçarela</option>
+              <option> </option>
             </select>
           </div>
           <div>
