--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
               <option value="">Selecione...</option>
               <option>Calabresa</option>
               <option>Muçarela</option>
-              <option> </option>
+              <option>Não informado</option>
             </select>
           </div>
           <div>
